--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 # datasource
 spring:
     datasource:
-      url: jdbc:mysql://localhost:3306/eqpmanage?serverTimezone=UTC
+      url: jdbc:mysql://localhost:3306/sysgl?serverTimezone=UTC&useAffectedRows=true
       username: root
-      password: 123
+      password: root
       driver-class-name: com.mysql.cj.jdbc.Driver
 logging:
     level:
